--- a/i/is/isp/ispyconnect.com.html
+++ b/i/is/isp/ispyconnect.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the ispyconnect.com privacy policy that was archived on 2013-08-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130819073241id_/http%3A//www.ispyconnect.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ispyconnect.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214075334id_/http%3A//www.ispyconnect.com/privacy.aspx) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en" class="no-js"><head id="ctl00_Head1"><meta http-equiv="X-UA-Compatible" content="chrome=IE8"><meta http-equiv="content-type" content="text/html;charset=utf-8;"><meta name="robots" content="index, follow, noodp"><title>
+<!DOCTYPE html><html lang="en" class="no-js"><head id="ctl00_Head1"><title>
 	iSpy Privacy Policy
-</title><link rel="stylesheet" href="content/site.css?v=1" type="text/css">
+</title><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="content-type" content="text/html;charset=utf-8;"><meta name="robots" content="index, follow, noodp"><link rel="stylesheet" href="content/site.css?v=1" type="text/css">
     <!--[if IE 7]>
 	<link rel="stylesheet" href="content/ie7.css" type="text/css" />
 	<![endif]-->
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="content/ie8.css" type="text/css" />
 	<![endif]-->
     <!--[if IE 6]><script type="text/javascript" src="content/ie6_script_other.js"></script><![endif]-->
+  <link href="/content/jquery-ui.css" rel="stylesheet" type="text/css">  
   <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/content/jquery.tools.min.js" charset="utf-8"></script>
-  <link href="/content/jquery-ui.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="/content/jquery-ui.min.js"></script>  
   <script type="text/javascript" src="/content/shared.min.js" charset="utf-8"></script>
   <script type="text/javascript">
@@ -36,12 +36,41 @@
 <meta name="description" content="Privacy Policy for iSpy - Camera Security Software" lang="en">
 </head>
 <body>
-<form name="aspnetForm" method="post" action="/privacy.aspx" id="aspnetForm" class="search">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTY1NDU2MTA1MmRkk0u8Rl7pdFAx9GxBog2ibyN7AVk=">
+<form name="aspnetForm" method="post" action="privacy.aspx" id="aspnetForm" class="search">
+<div>
+<input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
+<input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTY1NDU2MTA1MmRkalejCvRPnQjKBs1DFE5OI1ieT7o=">
+</div>
+
+<script type="text/javascript">
+//<![CDATA[
+var theForm = document.forms['aspnetForm'];
+if (!theForm) {
+    theForm = document.aspnetForm;
+}
+function __doPostBack(eventTarget, eventArgument) {
+    if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
+        theForm.__EVENTTARGET.value = eventTarget;
+        theForm.__EVENTARGUMENT.value = eventArgument;
+        theForm.submit();
+    }
+}
+//]]>
+</script>
 
 
-<script src="/ScriptResource.axd?d=A7QITaZiOsi9-wOKRxoBpUMPB8dj-_JkrtQckaidOuJ7kbDlixdLwaxJrYppooTfOgOXxFP3qVMd_hG_K9704eJJoCZPh1FCx2ccnZCzyYEIwzgH-L_aQCeELgm-Dk5tXj5NAsUnsynIAeuue3PoQdhCxpMdblT6d8lQ-uvMGal5qEao0&amp;t=93b4564" type="text/javascript"></script>
+<script src="/WebResource.axd?d=-BObMeXo5mNSeYBobLt4_tL-BIU6VFd7egiqU7B_MvsB8c_AB9DbJ0NFJK-nnLun7Ivw-31CH13QY3hiWYSxSDfucIU1&amp;t=635253488034302139" type="text/javascript"></script>
+
+
+<script src="/ScriptResource.axd?d=BmOaakneCy--C4WsAo9kw3aNN17SNqZVkhJmTpDqAcRxdGbWbmGQzt6NE251PCfQk8npRCf6IFjelKF0Hmul-pn5sHLeJtjew4CubBO-FbuOtxaBwNQGotzn6zRPLthQvNKA8APaO7oKG3h_o2GRNqlC7uAkE8ZIPywzZOIfehVDYBnF0&amp;t=6119e399" type="text/javascript"></script>
+<script src="/ScriptResource.axd?d=wjXS-Cu2WhQNut-aTMBTf7pdz1qbuWpI6QBrUBj-pxQSHUIBH4jVgTW5ly1dLhsctaeRIIotpFgl7C-ZtYNZBFKka5Y2VOnxfFpSMzO4_hmKup5mheTo-Q1Pya0cfdndWx3guUqAUXfQ_3lVsoU7MpqwmN5B3PrSsyr8coRyTAAx8Wzv0&amp;t=6119e399" type="text/javascript"></script>
 <script src="/Webservices/iSpy.asmx/js" type="text/javascript"></script>
+<script type="text/javascript">
+//<![CDATA[
+Sys.WebForms.PageRequestManager._initialize('ctl00$ScriptManager1', 'aspnetForm', [], [], [], 90, 'ctl00');
+//]]>
+</script>
  
 
 <div class="main">
@@ -65,17 +94,37 @@
 </div>
 </div>
 </div>
+<div style="width:967px;margin-left:2px;height:15px;padding:0px;">
+<script type="text/javascript">
+    google_ad_client = "pub-4865381389728096";
+    /* watch page */
+    google_ad_slot = "3882621555";
+    google_ad_width = 967;
+    google_ad_height = 30;
+    google_color_border = "e9e9e9";
+    google_color_bg = "e9e9e9";
+    google_color_link = "222222";
+    google_color_text = "222222";
+    google_color_url = "222222";
+
+</script>
+<script type="text/javascript" src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
 </div>
-<div class="content-row">    
+
+</div>
+<div class="content-row">
+      
 <div class="top-menu-row">
+   
 <div class="top-menu">
+     
 <ul class="menu sf-menu sf-horizontal sf-js-enabled" style="z-index:0">
 <li class="first-child item53 "><a href="/"><span>Home</span></a></li>
 <li class="parent item54"><a href="/download.aspx" class="sf-with-ul"><span>Download</span><span class="sf-sub-indicator"> »</span></a>
 <ul style="display: none; visibility: hidden;">
 <li class="first-child item71"><a href="/download.aspx"><span>iSpy</span></a></li>
-<li class="first-child item71"><a href="/download_ispyserver.aspx"><span>iSpy Camera Server</span></a></li>
-
 <li class="first-child item71"><a href="/plugins.aspx"><span>Plugins</span></a></li>
 <li class="first-child item71"><a href="/userguide-gadgets.aspx"><span>Gadgets</span></a></li>
 <li class="first-child item71"><a href="/userguide-mediaportal.aspx"><span>MediaPortal Extension</span></a></li>
@@ -101,7 +150,7 @@
 <li class="parent item56"><a href="/help.aspx" class="sf-with-ul"><span>Help</span><span class="sf-sub-indicator"> »</span></a>
 <ul style="display: none; visibility: hidden;">
 <li class="first-child item73"><a href="/userguide.aspx"><span>User Guide</span></a></li>
-<li class="first-child item73"><a href="/sources.aspx"><span>Connecting Cameras</span></a></li>
+<li class="first-child item73"><a href="/sources.aspx"><span>Camera Database</span></a></li>
 <li class="first-child item73"><a href="http://forums.ispyconnect.com/forum.aspx"><span>Forums</span></a></li>
 <li class="first-child item71"><a href="/ispyserver.aspx"><span>Using iSpy Server</span></a></li>
 <li class="first-child item74"><a href="/userguide-connecting.aspx"><span>Connecting iSpy</span></a></li>
@@ -126,30 +175,11 @@
 <li class="first-child item57"><a href="/privacy.aspx"><span>Privacy</span></a></li>
 <li class="first-child item57"><a href="/security.aspx"><span>Security</span></a></li>
 <li class="first-child item57"><a href="/integrators.aspx"><span>Rebranding (FREE!)</span></a></li>
-<li class="first-child item57"><a href="/userguide-offer-ispy-hosted.aspx"><span>iSpyConnect Plugin</span></a></li>
 <li class="first-child item57"><a href="/userguide-ispycentral.aspx">Host iSpyConnect<span></span></a></li>
-<li class="first-child item57"><a href="/affiliates.aspx"><span>Affiliates</span></a></li>
 </ul>
 </li>
 </ul>
-<div class="superfish_clear"></div><div id="ctl00_topads" style="width:967px;margin-left:2px;height:15px;padding:0px;">
-<script type="text/javascript">
-    google_ad_client = "pub-4865381389728096";
-    /* watch page */
-    google_ad_slot = "3882621555";
-    google_ad_width = 967;
-    google_ad_height = 30;
-    google_color_border = "e9e9e9";
-    google_color_bg = "e9e9e9";
-    google_color_link = "222222";
-    google_color_text = "222222";
-    google_color_url = "222222";
-
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
-</div>
+<div class="superfish_clear"></div>
 </div>
 </div>
 
@@ -170,11 +200,11 @@
  to serve ads on our site.
 Google's use of the DART cookie enables it to serve ads to our users based on their visit to our sites and other sites on the Internet.
 Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy..<br><br><strong>What do we use your information for?</strong> <br><br>
-Any of the information we collect from you may be used in one of the following ways: <br><br>; To personalize your experience<br>(your information helps us to better respond to your 
-individual needs)<br><br>; To improve our website<br>(we continually strive to improve our website offerings based on the information and feedback we receive from you)<br><br>; To 
-improve customer service<br>(your information helps us to more effectively respond to our customer service requests and support needs)<br><br>; To process transactions<br>
+Any of the information we collect from you may be used in one of the following ways: <br><br>To personalize your experience<br>(your information helps us to better respond to your 
+individual needs)<br><br>To improve our website<br>(we continually strive to improve our website offerings based on the information and feedback we receive from you)<br><br>To 
+improve customer service<br>(your information helps us to more effectively respond to our customer service requests and support needs)<br><br>To process transactions<br>
 </p><blockquote>Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other 
-than for the express purpose of delivering the purchased product or service requested.</blockquote><br>; To send periodic emails<br><br>The email address you provide may be used to 
+than for the express purpose of delivering the purchased product or service requested.</blockquote><br>To send periodic emails<br><br>The email address you provide may be used to 
 send you information, respond to inquiries, and/or other requests or questions.<br><br><strong>How do we protect your information?</strong> <br><br>We implement a variety of security
  measures to maintain the safety of your personal information when you place an order<br> <br>We offer the use of a secure server. All supplied sensitive/credit information is transmitted
   via Secure Socket Layer (SSL) technology and then encrypted into our Payment gateway providers database only to be accessible by those authorized with special access rights to such systems, 
@@ -238,7 +268,7 @@ send you information, respond to inquiries, and/or other requests or questions.<
 </div>
 <div class="footer">
 <div class="copyright">
-© Developerinabox 2013 | <a href="/privacy.aspx">Privacy Policy</a> | <a href="/security.aspx">Security</a> | <a href="/contact.aspx">Contact Us</a> | <a href="/integrators.aspx">Integrators</a> | <a href="/affiliates.aspx">Affiliates</a>
+© Developerinabox 2014 | <a href="/privacy.aspx">Privacy Policy</a> | <a href="/security.aspx">Security</a> | <a href="/contact.aspx">Contact Us</a> | <a href="/integrators.aspx">Integrators</a> | <a href="/affiliates.aspx">Affiliates</a>
 </div>
 </div>
 </div>    
