--- a/k/ka/kao/kaonsoftwares.com.html
+++ b/k/ka/kao/kaonsoftwares.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kaonsoftwares.com privacy policy that was archived on 2013-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131122150356id_/http%3A//www.kaonsoftwares.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kaonsoftwares.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214081524id_/http%3A//www.kaonsoftwares.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 		<title>Kaon Softwares' Privacy Policy</title>
@@ -12,7 +12,7 @@
 
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="JavaScript" src="http://www.kaonsoftwares.com/shopping-cart/js/ajax_content.js"></script>
+		<script async="" src="//www.google-analytics.com/analytics.js"></script><script language="JavaScript" src="http://www.kaonsoftwares.com/shopping-cart/js/ajax_content.js"></script>
 		<script language="JavaScript" src="http://www.kaonsoftwares.com/shopping-cart/js/kValidate.js"></script>
 		
 		<!-- popwin start -->
@@ -39,21 +39,18 @@
 		//-->
 		</script>
 
-		<!-- Google Analytics -->
-		<script type="text/javascript">
+		<!-- Google Analytics Universal -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-30888649-1']);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
+		  ga('create', 'UA-30888649-1', 'kaonsoftwares.com');
+		  ga('send', 'pageview');
 
 		</script>
-		</head>
+	</head>
 
 	<body>
 
@@ -170,7 +167,7 @@ Tip: Please do set your spam filter to verify an email received with its <b>SPF 
 			<a href="http://www.kaonsoftwares.com/sitemap.html">Site Map</a> | 
 			<a href="http://www.kaonsoftwares.com/privacy-policy.html">Privacy Policy</a> | 
 			&nbsp;&nbsp;&nbsp;
-			© 2001 - 2013, All Rights Reserved.
+			© 2001 - 2014, All Rights Reserved.
 		</div></div></div>
 
 		<br>
