--- a/f/fa/fak/fakemailgenerator.com.html
+++ b/f/fa/fak/fakemailgenerator.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fakemailgenerator.com privacy policy that was archived on 2013-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130625012740id_/http%3A//www.fakemailgenerator.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fakemailgenerator.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214083655id_/http%3A//www.fakemailgenerator.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,10 +8,11 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="imagetoolbar" content="no">
     <meta name="MSSmartTagsPreventParsing" content="true">
+    <meta http-equiv="Content-Language" content="en">
     <title>Fake Mail Generator - Free temporary email addresses</title>
-    <link rel="stylesheet" media="all" href="http://fmg.hotcw.com/css/A.all-3.css.pagespeed.cf.TD9UrKq_I1.css" type="text/css">
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://fmg.hotcw.com/min/js-1.js.pagespeed.jm.x4QE2_jUG9.js"></script>
-    <script type="text/javascript">var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-252953-10']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s);})();</script>
+    <link rel="stylesheet" media="all" href="http://fmg.hotcw.com/css/A.all-4.css.pagespeed.cf.JnEK3l6bC_.css" type="text/css">
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://fmg.hotcw.com/min/js-1.js.pagespeed.jm.tfp5gj15Ii.js"></script>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-252953-10','fakemailgenerator.com');ga('send','pageview');</script>
 </head>
 <body class="home">
 	<div id="wrapper">
@@ -80,7 +81,7 @@
                 </div>
             </div>
             <div class="footer-holder">
-                <p>Copyright © 2013 <a href="http://www.corbanworks.com/">Corban Works, LLC</a>. Part of the <a href="http://www.fakenamegenerator.com/">Fake Name Generator</a> project.</p>
+                <p>Copyright © 2014 <a href="http://www.corbanworks.com/">Corban Works, LLC</a>. Part of the <a href="http://www.fakenamegenerator.com/">Fake Name Generator</a> project.</p>
             </div>
         </div>
 	</div>
