--- a/n/ne/net/netcomponents.com.html
+++ b/n/ne/net/netcomponents.com.html
@@ -1,9 +1,11 @@
-<!--The following is the downloaded HTML source of the netcomponents.com privacy policy that was archived on 2013-08-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130828105156id_/http%3A//www.netcomponents.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netcomponents.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214084002id_/http%3A//www.netcomponents.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>netCOMPONENTS: Privacy Policy
 </title>
+
+
 
 <link rel="shortcut icon" href="/img/netcompICON.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
@@ -12,8 +14,8 @@
 <meta name="yandex-verification" content="4a3ffa86b60e7f1d">
 
 
-<link rel="stylesheet" href="/css/nc.css?ver=2013.235.104426175" media="all">
-<link rel="stylesheet" href="/css/nc_p.css?ver=2013.235.104426175" media="print">
+<link rel="stylesheet" href="/css/nc.css?ver=2013.310.54948175" media="all">
+<link rel="stylesheet" href="/css/nc_p.css?ver=2013.310.54948175" media="print">
 
 	
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
@@ -23,6 +25,7 @@ suid     = '';
 sesLng   = '';
 sLang    = 'en';
 iPSADelay= 500;
+regexpEmail = /^(([-a-z0-9_'\(\)\/&~!`\$]+\.)*[-a-z0-9_ '\(\)\/&~!`\$]*[-a-z0-9_\.][a-z0-9]|[a-z0-9])@(([a-z0-9][-a-z0-9_]*[a-z0-9]|[a-z0-9])\.)+[a-z]{2,6}$/i;
 
 waitIsOver = false;
 window.setTimeout('turnon()',3500);
@@ -56,6 +59,8 @@ function turnon() {
 
 </head>
 
+
+
 <body onload="doOnLoad()" style="">
 <div class="main_header">
 
@@ -74,7 +79,10 @@ function turnon() {
 </div>  <!-- main_header -->
 
 <div class="info_hdr">
-			<div id="netcomp_partsrt"></div>
+			<div id="netcomp_partsrt" style="width: 280px;">
+		
+			</div>
+			
 
 			<div class="mbrsup-blank"><span></span><a href="http://www.netcomponents.com/upload.htm">Suppliers</a></div>
 			<div class="mbrsup-blank"><span></span><a href="http://www.netcomponents.com/search.htm">Members</a></div>
@@ -173,7 +181,7 @@ Supplier acknowledges and agrees that part numbers only, when not associated wit
 	<div class="clr"></div>
 </div> <!-- main -->
 <div class="netcomp_bottom">	
-© Copyright 1997-2013 <a href="http://www.netcomponents.com/sitemap/">netCOMPONENTS, Inc.</a>
+© Copyright 1997-2014 <a href="http://www.netcomponents.com/sitemap/">netCOMPONENTS, Inc.</a>
 
 </div>
 
