--- a/t/tr/tra/trafficattheraces.com.html
+++ b/t/tr/tra/trafficattheraces.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the trafficattheraces.com privacy policy that was archived on 2013-09-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130907173624id_/http%3A//www.trafficattheraces.com/privacy.php%3Frid%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trafficattheraces.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214084700id_/http%3A//www.trafficattheraces.com/privacy.php%3Frid%3D) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 <title>Traffic at the Races</title> 
 <link href="/screen2.css" rel="stylesheet" type="text/css"> 
-<!-- SHOW ALL USER COUNT WITH 25564 -->
+<!-- SHOW ALL USER COUNT WITH 25569 -->
 </head>
 <body>
 
@@ -92,7 +92,7 @@ We will contact you with updates offers and relevent information as well as a ne
 Newsletters and mail outs will contain advertising from third parties along with relevent updates and news.<br><br>
 Any financial information will be used only for purchases from this site and by the relevent payment processor (paypal)
 we do not store sensitive information on our servers.</font><br><br>
-<br><br></p><center><p align="center"><a href="http://thankyoupagemaker.com/clickmemberad.php?program=64" target="_BLANKS"><img src="http://trafficswirl.com/images/spbonus1.png" alt="Get more Traffic to Your Website in Three Easy Steps with Traffic Swirl!" border="0"></a></p><br><br></center><br><br></div></td></tr></tbody></table></font>
+<br><br></p><center><p align="center"><a href="http://thankyoupagemaker.com/clickmemberad.php?program=34" target="_blank"><img src="http://www.te-basics.com/images/login.png" width="515" height="316" border="0"></a></p><br><br></center><br><br></div></td></tr></tbody></table></font>
 </div></font></font></div><font size="1"><font size="1">
 <div id="footer-bg">
      	<div id="footer">
