--- a/j/ja/jan/jangosmtp.com.html
+++ b/j/ja/jan/jangosmtp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jangosmtp.com privacy policy that was archived on 2013-08-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130823131511id_/http%3A//www.jangosmtp.com/Privacy-Statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jangosmtp.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214090058id_/http%3A//www.jangosmtp.com/Privacy-Statement.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -52,7 +52,7 @@
 	                	</ul>
 				<div id="utilities">
 					<ul style="margin:2px;">
-						<li style="margin:0px;"><a href="/Free-Account.asp"><img src="/common/images/smtpsignup.png" onmouseover="this.src='/common/images/smtpsignup2.png'" onmouseout="this.src='/common/images/smtpsignup.png'" border="0" alt="SignUp"></a></li>
+						<li style="margin:0px;"><a href="/paid-account.asp"><img src="/common/images/smtpsignup.png" onmouseover="this.src='/common/images/smtpsignup2.png'" onmouseout="this.src='/common/images/smtpsignup.png'" border="0" alt="SignUp"></a></li>
 						<li style="margin:0px;"><a href="/login.asp"><img src="/common/images/smtplogin.png" onmouseover="this.src='/common/images/smtplogin2.png'" onmouseout="this.src='/common/images/smtplogin.png'" border="0" alt="Login"></a> </li>
 					</ul>
 				</div><!-- /utilities -->
@@ -212,7 +212,7 @@ Or see the <a href="Contact-Us.asp">Contact Us</a> page
 
 			1-888-465-2646 or 937-610-0536<br>
 
-			JangoSMTP.com is a service of JangoMail, Inc. © Copyright 2013 JangoMail, Inc. All Rights Reserved.<br>
+			JangoSMTP.com is a service of JangoMail, Inc. © Copyright 2014 JangoMail, Inc. All Rights Reserved.<br>
 			
 			<a href="http://www.jangomail.com">Need an email broadcast service? Use JangoMail for email marketing campaigns.</a>
 		</div>
@@ -292,7 +292,7 @@ var _sf_async_config={uid:24031,domain:"jangosmtp.com"};
 impressions_campaign_id = "c4ca4238a0b923820dcc509a6f75849b";
 impressions_page_url = encodeURIComponent(window.location);
 document.write("\x3Cscript type='text/javascript' src='https://www.impressions.com/external/advertiser?campaign_id="+impressions_campaign_id+"&page_url="+impressions_page_url+"'>\x3C/script>");
-</script><script type="text/javascript" src="https://www.impressions.com/external/advertiser?campaign_id=c4ca4238a0b923820dcc509a6f75849b&amp;page_url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130823131511id_%2Fhttp%253A%2F%2Fwww.jangosmtp.com%2FPrivacy-Statement.asp"></script>
+</script><script type="text/javascript" src="https://www.impressions.com/external/advertiser?campaign_id=c4ca4238a0b923820dcc509a6f75849b&amp;page_url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140214090058id_%2Fhttp%253A%2F%2Fwww.jangosmtp.com%2FPrivacy-Statement.asp"></script>
 
 
 
