--- a/g/ga/gar/garenaworld.com.html
+++ b/g/ga/gar/garenaworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the garenaworld.com privacy policy that was archived on 2013-08-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130811094325id_/http%3A//www.garenaworld.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the garenaworld.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214090913id_/http%3A//www.garenaworld.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy</title>
@@ -14,7 +14,7 @@
 <link rel="apple-touch-icon" href="/images/gwapple.png">
 <meta name="keywords" content="garena, inventory a+, warcraft, dota, dota hotkeys, tools, maps, hacks, guides, cheats, garenamaster, heroes of newerth">
 <link type="text/css" rel="stylesheet" href="http://m3k.ro/cdn/1/garenaworld.css">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script src="//server.cpmstar.com/cached/js/popunder_v101.pack.js" type="text/javascript"></script><script type="text/javascript" src="http://m3k.ro/cdn/1/garenaworld_java.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script src="//server.cpmstar.com/cached/js/popunder_v101.pack.js" type="text/javascript"></script><script type="text/javascript" src="http://m3k.ro/cdn/1/garenaworld_java.js"></script>
 <script type="text/javascript">
 /*@cc_on
   @if (@_jscript_version == 5.8)
@@ -55,7 +55,7 @@
 var cpmstar_rnd=Math.round(Math.random()*999999);
 var cpmstar_pid=36910;
 document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-</script><script language="Javascript" src="http://server.cpmstar.com/view.aspx?poolid=36910&amp;script=1&amp;rnd=910099"></script>
+</script><script language="Javascript" src="http://server.cpmstar.com/view.aspx?poolid=36910&amp;script=1&amp;rnd=296003"></script>
 
 </div>
 	<div id="container">
@@ -97,7 +97,7 @@ document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.co
 </script>
 <div id="quick_login">Hello There, Guest!
 <a href="http://www.garenaworld.com/fbcore/fbconnect.php"><img src="images/transp.png" width="16" height="16" class="spr" style="display:inline; background-position: -261px -0px; width: 16px; height: 16px">Login with Facebook</a><a href="http://www.garenaworld.com/member.php?action=login"><img src="images/transp.png" width="16" height="16" class="spr" style="display:inline; background-position: -679px -0px; width: 16px; height: 16px">Login
-</a><a href="http://www.garenaworld.com/member.php?action=register"><img src="images/transp.png" width="16" height="16" class="spr" style="display:inline; background-position: -915px -0px; width: 16px; height: 16px"> Register
+</a><a href="http://www.garenaworld.com/member.php?action=register"><img src="images/transp.png" width="16" height="16" class="spr" style="display:inline; background-position: -915px -0px; width: 16px; height: 16px"> Create Account
 </a></div>
 </div>
 <!-- end: header_welcomeblock_guest -->
@@ -206,16 +206,10 @@ _atrk_opts = { atrk_acct:"V9Wte1a8gR00Mz", domain:"garenaworld.com",dynamic: tru
 			</div>
 		<hr class="hidden">
 			<div id="copyright">
-				<span class="float_right"><strong>Current time:</strong> 11-Aug-2013, 11:43 AM</span>
-				<!-- You may NOT remove, modify or hinder the visibility of the MyBB copyright at any time.
-				     It must contain the links to the MyBB website and be formatted appropriately.
-					 Failure to comply with the above will result in prosecution to the full extent of the law.
-					 This is free software, support us and we'll support you. -->
+				<span class="float_right"><strong>Current time:</strong> 14-Feb-2014, 11:09 AM</span>				
 <span>All trademarks are the property of their respective owners.<br> This forum is not in any way associated with  <a href="http://www.garena.com/" target="_blank" title="Garena official site" rel="nofollow"> Garena Interactive Holding Limited</a> 	
 </span>
-           <br>     <span>Powered By <a href="http://www.mybb.com/" target="_blank" rel="nofollow">MyBB</a>, © 2002-2013 <a href="http://www.mybb.com/" target="_blank" rel="nofollow">MyBB Group</a>.<!-- End copyright -->
-				<!-- You may not remove, modify, or hinder the visibility of the following copyright.
-				     Doing so will void your right to use the theme -->
+           <br>     <span>Powered By <a href="http://www.mybb.com/" target="_blank" rel="nofollow">MyBB</a>, © 2002-2014 <a href="http://www.mybb.com/" target="_blank" rel="nofollow">MyBB Group</a>.
 				Theme created by <a href="http://community.mybb.com/user-1830.html" target="_blank" rel="nofollow">Justin S.</a>
 <br>
 </span>
@@ -223,27 +217,19 @@ _atrk_opts = { atrk_acct:"V9Wte1a8gR00Mz", domain:"garenaworld.com",dynamic: tru
  <!-- End theme copyright -->
 </div></div>
 	<!-- The following piece of code allows MyBB to run scheduled tasks. DO NOT REMOVE --><!-- End task image code --> <!-- Fading Postbit Buttons Plugin by Darkly of MyBB Community Forums. -->
-<script type="text/javascript">
-   var infolink_pid = 95190;
-   var infolink_wsid = 0;
-</script>
-<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>		
 <div id="promotions">
 <a id="promo_facebook" href="http://facebook.com/GarenaWorld" title="GarenaWorld on Facebook" target="_blank"></a>
-<a id="promo_twitter" href="http://twitter.com/GarenaWorld" title="GarenaWorld on Twitter" target="_blank"></a>
 <a id="promo_rss" href="http://www.garenaworld.com/syndication.php" title="RSS Feed" target="_blank"></a>
 </div>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25047709-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-9124489-12', 'garenaworld.com');
+  ga('send', 'pageview');
 </script>
 <!-- end: footer -->
 
 
-<!-- end: privacy --><!-- optimization: 2.05% in 0.002676 Seconds --></body></html>
+<!-- end: privacy --><!-- optimization: 2.02% in 0.002478 Seconds --></body></html>
