--- a/s/se/sec/secretbuilders.com.html
+++ b/s/se/sec/secretbuilders.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the secretbuilders.com privacy policy that was archived on 2013-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130424033350id_/http%3A//www.secretbuilders.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the secretbuilders.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214091313id_/http%3A//secretbuilders.com/privacy.html) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -92,7 +92,20 @@
     <div class="page_content_bottom"></div>
     </div>
     <div class="bottom_menu"></div>
-		<div style="margin: 2.5em">
+		<div style="width: 728px; height: 90px; display: block; margin: 0 auto;">
+	<script type="text/javascript"><!--
+		google_ad_client = "ca-pub-8182004502421687";
+		/* SecretBuilders Home */
+		google_ad_slot = "1931383456";
+		google_ad_width = 728;
+		google_ad_height = 90;
+		//-->
+		</script>
+		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+	</script>
+</div>
+
+<div style="margin: 2.5em">
 	<a href="http://www.parents.com/fun/best-online-games/?page=4" rel="nofollow" target="_blank">
 		<img src="images/parentsmag.png" width="336" height="59" alt="SecretBuilders Makes Parent Magazine's Ten Best Kids Gameworlds">
 	</a>
@@ -146,7 +159,7 @@
     </ul>
     
     <p style="padding-bottom: 5px">
-    	Renaissance 2.0 Media Copyright 2009-2011. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp; -&nbsp;&nbsp;&nbsp;<a href="/sitemap.html"> Site Map&nbsp;&nbsp;&nbsp;</a>
+    	© 2014 Renaissance 2.0 Media. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp; -&nbsp;&nbsp;&nbsp;<a href="/sitemap.html"> Site Map&nbsp;&nbsp;&nbsp;</a>
     </p>
 </div>
 
