--- a/b/bi/bil/billguard.com.html
+++ b/b/bi/bil/billguard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the billguard.com privacy policy that was archived on 2013-11-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131112110434id_/https%3A//www.billguard.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the billguard.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214095051id_/https%3A//www.billguard.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -8,22 +8,22 @@
 <meta content="BillGuard, BillGuards, BillsGuard, credit card fraud, credit card scam, scam, credit card protection, bill, bills, bill fraud, bill scam, billing error, bill protection, bill alerts, bill support, fraud alerts, fraud detection, fraud monitoring, scam alerts, identity theft, identity protection, statement fraud, statement scam, statement error, statement protection, credit card statement, hidden fees, unwanted charges, unrecognized charge, unrecognized charges, debit card fraud, debit card protection." name="keywords">
 <meta content="BillGuard is the fastest, smartest way to track your spending and save money." name="description">
 <meta content="O-MeFHeXTh5J7EjH507JB96F_i_KhkrN_gseSoNRwWM" name="google-site-verification">
-<meta content="BillGuard™ | The Smart Inbox For Your Money" property="og:title">
+<meta content="BillGuard™ | The Smart Money App" property="og:title">
 <meta content="http://static.billguard.com/images/fb_image.png" property="og:image">
 <meta name="readability-verification" content="8pAxwUj3DNyjgHMx4wCfdXUZta6KTrCcZ48xM3Nz">
 <meta name="viewport" content="width=1024">
 <meta name="apple-itunes-app" content="app-id=602710567">
 <meta property="fb:app_id" content="164595993625017">
-<title>BillGuard® | The Smart Inbox For Your Money | Privacy &amp; Security
+<title>BillGuard® | The Smart Money App | Privacy &amp; Security
 Policy</title>
-<link rel="stylesheet" href="/static/CACHE/css/5579c1c68e6b.css" type="text/css">
+<link rel="stylesheet" href="/static/CACHE/css/84b243e1f8c1.css" type="text/css">
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript">
     if (typeof jQuery == 'undefined') {
         document.write(unescape("%3Cscript src='/static/js/jquery-1.7.2.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
 </script><script src="/static/js/jquery-1.7.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="/static/CACHE/js/138a8bdd646a.js"></script>
+<script type="text/javascript" src="/static/CACHE/js/4fa5c843f4b0.js"></script>
 <!--[if lt IE 9]>
   <script src='/static/js/ie/html5shiv.js'></script>
   <link media='all' href='/static/css/ie8.css' type='text/css' rel='stylesheet' />
@@ -69,7 +69,7 @@ Policy</title>
 <div class="pull-right">
 <a href="https://secure.billguard.com/">Login</a>
 <div class="sep"></div>
-<a class="get-the-app js-get-the-app" href="http://appstore.com/billguard">Get the free app</a>
+<a class="get-the-app js-get-the-app" href="/iphone/homenav">Get the free app</a>
 </div>
 <div class="navbar-links myriad">
 <a href="/greycharges" class="">ABOUT GREY CHARGES</a>
@@ -511,7 +511,7 @@ You may send us requests, responses, questions and complaints with respect to ou
 <p class="line1 myriad">The Smart Inbox For Your Money</p>
 </li>
 <li>
-<p class="line2">© BillGuard, Inc. 2013 All Rights Reserved</p>
+<p class="line2">© BillGuard, Inc. 2014 All Rights Reserved</p>
 </li>
 </ul>
 <div class="vertical-separator"></div>
